tests/live/envoy-cds-only.yaml
node:
    id: tests
    cluster: tests
    locality:
        region: localhost
        zone: localhost
static_resources:
    listeners:
        - name: test
          address:
              socket_address:
                  protocol: TCP
                  address: 127.0.0.1
                  port_value: 9091
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          stat_prefix: test
                          route_config:
                              virtual_hosts:
                                  - name: test
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/ping" }
                                          direct_response:
                                              status: 200
                                              body:
                                                  inline_string: "Hello from Envoy"
                                        - match: { prefix: "/proxy/" }
                                          route: { cluster: "test" }
                              validate_clusters: false
                          http_filters:
                              - name: envoy.router
    clusters:
        - name: cds
          connect_timeout: 1s
          type: STATIC
          dns_lookup_family: V4_ONLY
          lb_policy: RANDOM
          http2_protocol_options: {}
          upstream_connection_options:
              tcp_keepalive: {}
          load_assignment:
              cluster_name: cds
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 9090
dynamic_resources:
    cds_config:
        resource_api_version: V2
        api_config_source:
            api_type: GRPC
            transport_api_version: V2
            grpc_services:
                envoy_grpc:
                    cluster_name: cds
